--- a/src/App.EndPoints.UI/Areas/Admin/Views/Shared/_Layout.cshtml
+++ b/src/App.EndPoints.UI/Areas/Admin/Views/Shared/_Layout.cshtml
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>@ViewData["Title"] - زودکار</title>
+    <title>@ViewData["Title"] - پنل ادمین زودکار</title>
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/App.EndPoints.UI.styles.css" asp-append-version="true" />
@@ -12,7 +12,7 @@
     <header>
         <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
             <div class="container-fluid">
-                <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">زودکار</a>
+                <a class="navbar-brand" asp-area="Admin" asp-controller="Dashboard" asp-action="Index">پنل ادمین</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" aria-controls="navbarSupportedContent"
                         aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
@@ -20,10 +20,7 @@
                 <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
                     <ul class="navbar-nav flex-grow-1">
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">صفحه اصلی</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">حریم خصوصی</a>
+                            <a class="nav-link text-dark" asp-area="Admin" asp-controller="Dashboard" asp-action="Index">صفحه اصلی</a>
                         </li>
                     </ul>
                 </div>
@@ -35,7 +32,7 @@
             @RenderBody()
         </main>
     </div>
-    
+
     <footer class="border-top footer text-muted" style="direction: ltr">
         <div class="container">
             &copy; 2022 - ZoodKar - <a asp-area="" asp-controller="Home" asp-action="Privacy">حریم خصوصی</a>
