--- a/src/App.EndPoints.UI/Areas/Admin/Views/Dashboard/Index.cshtml
+++ b/src/App.EndPoints.UI/Areas/Admin/Views/Dashboard/Index.cshtml
@@ -1,5 +1,24 @@
-﻿@*
-    For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
-*@
-@{
-}
+﻿@model List<UsersViewModel>
+
+<table class="table">
+  <thead>
+    <tr>
+      <th scope="col">#</th>
+      <th scope="col">First</th>
+      <th scope="col">Last</th>
+      <th scope="col">Handle</th>
+    </tr>
+  </thead>
+  <tbody>
+      @foreach (var item in Model)
+      {
+          <tr>
+             <th scope="row">@item.</th>
+            <td>Mark</td>
+            <td>Otto</td>
+             <td></td>
+    </tr>
+      }
+    
+   
+</table>
