--- a/src/App.EndPoints.UI/Views/_ViewImports.cshtml
+++ b/src/App.EndPoints.UI/Views/_ViewImports.cshtml
@@ -1,3 +1,4 @@
 ﻿@using App.EndPoints.UI
 @using App.EndPoints.UI.Models
+@using App.EndPoints.UI.Models.ViewModel
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
