--- a/src/App.EndPoints.UI/Areas/Admin/Views/Shared/_AdminSidebar.cshtml
+++ b/src/App.EndPoints.UI/Areas/Admin/Views/Shared/_AdminSidebar.cshtml
@@ -9,7 +9,7 @@
                 </h6>
                 <ul class="nav flex-column">
                     <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="#">
+                        <a class="nav-link active" aria-current="page" asp-controller="Dashboard" asp-action="Index">
                             <span data-feather="home"></span>
                             داشبورد
                         </a>
@@ -54,9 +54,9 @@
                 </h6>
                 <ul class="nav flex-column mb-2">
                     <li class="nav-item">
-                        <a class="nav-link" href="#">
+                        <a class="nav-link"asp-asp-controller="ServiceControler" asp-action="Index">
                             <span data-feather="file-text"></span>
-                            الشهر الحالي
+                           مدیریت خدمات
                         </a>
                     </li>
                     <li class="nav-item">
