--- a/src/App.EndPoints.UI/Areas/Admin/Views/Service/Index.cshtml
+++ b/src/App.EndPoints.UI/Areas/Admin/Views/Service/Index.cshtml
@@ -1,32 +1,43 @@
-﻿@model ServiceViewModel
-
+﻿@model List<CategoryDto>
+<a type="button" class="btn btn-warning"  asp-controller="Service" asp-action="AddService">ثبت سرویس جدید</a>
+<a type="button" class="btn btn-warning"  asp-controller="Service" asp-action="AddCategory">ثبت دسته بندی جدید</a>
 <table class="table">
   <thead>
     <tr>
       <th scope="col">شناسه</th>
       <th scope="col">عنوان</th>
+      <th></th>
       <th scope="col">قیمت </th>
       <th scope="col">توضیحات </th>
   
     </tr>
   </thead>
   <tbody>
-      @foreach (var item in Model.Categories)
+      @foreach (var item in Model)
       {
-          <tr>
+          <tr class="table-dark">
               <td>@item.Id</td>
-              <td>@item.Title</td> 
+              <td><b>@item.Title</b></td> 
+              <td>
+                  <div class="text-center">
+                     <img src=/Image/@item.FileId class="img-circle" alt="بدون تصویر" width="100" height="50">
+                        </div>
+              </td>
               <td></td>
-              <td></td>
+               <td></td>
+               <td><a type="button" class="btn btn-warning"  asp-controller="Service" asp-action="UpdateCategory" asp-route-Id=@item.Id >ویرایش</a> </td>
+               <td><a type="button" class="btn btn-warning"  asp-controller="Service" asp-action="DeleteCatedory">حذف</a> </td>
           </tr>
           @foreach (var servic in item.Services)
               {
-                  <tr>
+                  <tr class="table-secondary">
                       <td>@servic.Id</td>
                       <td>@servic.Title</td>
+                      <td></td>
                       <td>@servic.Price</td>
                       <td>@servic.ShortDescription</td>
-                      
+                      <td><a type="button" class="btn btn-warning"  asp-controller="Service" asp-action="UpdateService">ویرایش</a> </td>
+                       <td><a type="button" class="btn btn-warning"  asp-controller="Service" asp-action="DeleteService">حذف</a> </td>
               
                   </tr>
               }
@@ -36,3 +47,4 @@
     
    
 </table>
+ 
