--- a/src/App.EndPoints.UI/Areas/Admin/Views/Shared/_Layout.cshtml
+++ b/src/App.EndPoints.UI/Areas/Admin/Views/Shared/_Layout.cshtml
@@ -8,6 +8,9 @@
     @*<link rel="stylesheet" href="~/lib/bs-theme/bootstrap-flatly.min.css" />*@
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/App.EndPoints.UI.styles.css" asp-append-version="true" />
+   
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
 </head>
 <body>
 
