--- a/src/App.EndPoints.UI/Views/Account/Register.cshtml
+++ b/src/App.EndPoints.UI/Views/Account/Register.cshtml
@@ -10,14 +10,14 @@
 			<div class="wrap-login100">
 
 
-			<form class="login100-form validate-form"  asp-controller="Account" asp-action="Register" method="post">
+			<form class="login100-form validate-form" enctype="multipart/form-data" asp-controller="Account" asp-action="Register" method="post">
 				<span class="login100-form-title">ثبت نام </span>
 				<!-- name -->
 				<div class="wrap-input100 validate-input"  data-validate = "لطفا  نام  خود را وارد کنید!">
 					<input class="input100" asp-for=FirstName type="text" placeholder="نام ">
 					<span class="focus-input100"></span>
 						<span class="symbol-input100">
-							<i class="fa fa-envelope" aria-hidden="true"></i>
+							<i class="bi bi-person-fill" aria-hidden="true"></i>
 						</span>
 				</div>
 				<!--name -->
@@ -26,7 +26,7 @@
 					<input class="input100" asp-for=LastName type="text" placeholder="نام خانوادگی  ">
 					<span class="focus-input100"></span>
 						<span class="symbol-input100">
-							<i class="fa fa-envelope" aria-hidden="true"></i>
+							<i class="bi bi-person-fill" aria-hidden="true"></i>
 						</span>
 				</div>
 				<!--name -->
@@ -35,7 +35,7 @@
 					<input class="input100" asp-for=HomeAddress type="text" placeholder="آدرس محل سکونت  ">
 					<span class="focus-input100"></span>
 						<span class="symbol-input100">
-							<i class="fa fa-envelope" aria-hidden="true"></i>
+							<i class="bi bi-pin-map-fill" aria-hidden="true"></i>
 						</span>
 				</div>
 				<!--name -->
@@ -64,13 +64,28 @@
 							<i class="fa fa-lock" aria-hidden="true"></i>
 						</span>
 				</div>
+				
+				<div class="wrap-input100 validate-input" data-validate = "عکس خود را وارد کنید">
+					<input asp-for=File  placeholder="انتخاب عکس"    class="input100" />
+					<span class="focus-input100"></span>
+						<span class="symbol-input100">
+							<i class="bi bi-folder" aria-hidden="true"></i>
+						</span>
+				</div>
+				 
+				
 				<!-- / enter password-->
 				<!-- / Role -->
-				
-						<input asp-for=Role type="radio" value="Expert">
-					  <label for="Expert">متخصص</label>
-					  <input asp-for=Role type="radio"  value="Customer">
-					 <label for="Customer">کارفرما</label>
+				<div class="wrap-input100 validate-input" data-validate = "عکس خود را وارد کنید">
+				 <select asp-for="Role" class="select-chosen input100" asp-items="@ViewBag.Roles" >
+                        <option disabled selected> نوع حساب</option>
+                    </select>
+					<span class="focus-input100"></span>
+						<span class="symbol-input100">
+							<i class="bi bi-folder" aria-hidden="true"></i>
+						</span>
+				</div>
+						
 					
 				 
 				<!-- / Role -->
@@ -94,7 +109,7 @@
 			</div>
 		</div>
 	</div>
-
+	
 @section Scripts{
     <partial name="_ValidationScriptsPartial"/>
 }
