--- a/src/App.EndPoints.UI/Views/Shared/_Layout.cshtml
+++ b/src/App.EndPoints.UI/Views/Shared/_Layout.cshtml
@@ -15,6 +15,8 @@
 <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/App.EndPoints.UI.styles.css" asp-append-version="true" />
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css">
+   
 </head>
 <body>
     <header>
@@ -36,12 +38,13 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Account" asp-action="Login"> ورورد</a>
                         </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Account" asp-action="Rigster">ثبت نام </a>
-                        </li>
+                        
                     </ul>
                 </div>
             </div>
+             <a class="nav-link px-3" href="#">@User.Identity.Name
+              <img src="" class="rounded-circle" alt="Cinque Terre"> 
+             </a>
         </nav>
     </header>
     <div class="container">
@@ -70,5 +73,6 @@
 	</script>
 	<script src="js/scripts.js"></script>
     @await RenderSectionAsync("Scripts", required: false)
+   
 </body>
 </html>
